# GameOfLife

./: CMakeLists.txt  Exception.cxx  Exception.hxx  README.md  SDL.cxx  SDL.hxx  main.cxx  rules.cl
