PROJECT ( GameOfLife )
CMAKE_MINIMUM_REQUIRED ( VERSION 2.8.9 )

# for g++ and clang++
IF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    IF (CMAKE_CXX_COMPILER_VERSION VERSION_LESS "4.7.0")
        SET ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x" )
    ELSE ()
        SET ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11" )
    ENDIF ()
ELSEIF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
    # will have to adjust this... older clang versions may need -std=c++0x
    # but I could not find an exact version number :-/
    SET ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11" )
ENDIF ()

SET ( CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake" )

FIND_PACKAGE ( Threads )
FIND_PACKAGE ( OpenCL REQUIRED )
FIND_PACKAGE ( OpenGL REQUIRED )

INCLUDE ( FindPkgConfig )
PKG_SEARCH_MODULE ( SDL2 REQUIRED sdl2 )

FILE ( GLOB gol_SOURCES *.cxx )
FILE ( GLOB gol_HEADERS *.hxx )

INCLUDE_DIRECTORIES ( ${OPENCL_INCLUDE_DIR} )
INCLUDE_DIRECTORIES ( ${OPENGL_INCLUDE_DIR} )
INCLUDE_DIRECTORIES ( ${SDL2_INCLUDE_DIRS} )

ADD_EXECUTABLE ( GameOfLife ${gol_SOURCES} ${gol_HEADERS} )
TARGET_LINK_LIBRARIES ( GameOfLife ${OPENCL_LIBRARY} ${OPENGL_LIBRARIES} ${SDL2_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} )
